Modify access rules

--- a/project.config
+++ b/project.config
@@ -3,6 +3,7 @@
 [access]
 	inheritFrom = All-Projects
 [access "refs/*"]
+	owner = group pdxostc-management
 	owner = group user/amcgee7
 [access "refs/for/refs/*"]
 	read = group user/amcgee7
