--- a/project.config
+++ b/project.config
@@ -4,21 +4,21 @@
 	inheritFrom = All-Projects
 [access "refs/*"]
 	owner = group pdxostc-management
-	owner = group user/amcgee7
+	owner = group user/amcgee7 (amcgee7)
 [access "refs/for/refs/*"]
-	read = group user/amcgee7
-	push = group user/amcgee7
-	label-Code-Review = -2..+2 group user/amcgee7
-	label-Verified = -1..+1 group user/amcgee7
-	rebase = group user/amcgee7
-	removeReviewer = group user/amcgee7
-	submit = group user/amcgee7
+	read = group user/amcgee7 (amcgee7)
+	push = group user/amcgee7 (amcgee7)
+	label-Code-Review = -2..+2 group user/amcgee7 (amcgee7)
+	label-Verified = -1..+1 group user/amcgee7 (amcgee7)
+	rebase = group user/amcgee7 (amcgee7)
+	removeReviewer = group user/amcgee7 (amcgee7)
+	submit = group user/amcgee7 (amcgee7)
 [access "refs/heads/*"]
-	read = group user/amcgee7
-	create = group user/amcgee7
-	push = +force group user/amcgee7
-	pushMerge = group user/amcgee7
+	read = group user/amcgee7 (amcgee7)
+	create = group user/amcgee7 (amcgee7)
+	push = +force group user/amcgee7 (amcgee7)
+	pushMerge = group user/amcgee7 (amcgee7)
 [access "refs/tags/*"]
-	push = +force group user/amcgee7
-	pushTag = group user/amcgee7
-	pushSignedTag = group user/amcgee7
+	push = +force group user/amcgee7 (amcgee7)
+	pushTag = group user/amcgee7 (amcgee7)
+	pushSignedTag = group user/amcgee7 (amcgee7)
